[gd_scene load_steps=2 format=3 uid="uid://c85ifsvxnlmui"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_8yvkr"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 770.0
offset_bottom = 953.0
script = ExtResource("1_8yvkr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 764.0
offset_bottom = 944.0
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 757.0
offset_bottom = 937.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Game Over" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 80
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "YOUR SCORE: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="RestartGame" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "RESTART GAME"
icon_alignment = 1

[node name="MainMenu" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "MAIN MENU"

[node name="QuitGame" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "QUIT GAME"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/RestartGame" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
